# password-store-rs

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/commands/: add.rs  find.rs  init.rs  mod.rs  show.rs
src/integrations/: git.rs  gpg.rs
