[package]
name = "password-store-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.8", features = ["derive", "cargo"] }
is_executable = "1.0.1"
once_cell = "1.18.0"
regex = "1.11.1"
rpassword = "7.3.1"
